# lu-estilo-API

./: README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/database/: database.py  enums.py  models.py  schemas.py
backend/app/routes/: auth_router.py  cliente_router.py  pedido_router.py  produto_router.py  usuario_router.py
backend/app/services/: auth_services.py  cliente_services.py  pedido_services.py  produto_services.py  usuario_services.py
backend/tests/: conftest.py  utils.py
backend/tests/routes/: test_auth.py  test_cliente.py  test_pedido.py  test_produto.py
