[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Max-Antonio <antoniomax@academico.ufs.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
