[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Max-Antonio <antoniomax@academico.ufs.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = {extras = ["email"], version = "^2.11.4"}
sqlmodel = "^0.0.24"
pydantic-settings = "^2.9.1"
psycopg = "^3.2.9"
jwt = "^1.3.1"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
